Added display none for gist meta

--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -327,3 +327,5 @@ body > footer {
 	
 	small { color: #333; font-size: 1.3em; font-family: Palatino, "Palatino Linotype", Book Antiqua, serif; }
 }
+
+.gist-meta { display: none; }
