--- a/app/articles/false-fears.haml
+++ b/app/articles/false-fears.haml
@@ -1,7 +1,7 @@
 -# title: False fears
 -# published: 2011-08-07
--# excerpt: Looking beyond working groups
--# keywords: html, html5, w3c, whatwg, the web
+-# excerpt: Fail, make mistakes and poor judgements… but for god sakes, do something!
+-# keywords: startups, apps, fears, building software
 
 .column.eight
   :smartypants
@@ -13,7 +13,7 @@
 
     I think it's false fears at work, we place them over every decision that we make—it needs this or that feature, or "the customers" (I hate calling people users) won't like it because of x or really, whatever. It's paralysing.
 
-    There is no value in hoarding away your treasures. If you're genuinely creating things that you want to share with other people, then put them out there, fail, make mistakes and poor judgements… but for gods ales, do it!
+    There is no value in hoarding away your treasures. If you're genuinely creating things that you want to share with other people, then put them out there, fail, make mistakes and poor judgements… but for god sakes, do something!
 
     I'm working on it too. Good luck.
 
@@ -21,4 +21,4 @@
   %p
     :smartypants
       "Only drug dealers and software companies call their customers 'users'" 
-  %p — author unknown (to me)
+  %p — Edward Tufte
