--- a/app/articles/false-fears.haml
+++ b/app/articles/false-fears.haml
@@ -1,6 +1,6 @@
 -# title: False fears
 -# published: 2011-08-07
--# excerpt: Fail, make mistakes and poor judgements… but for god sakes, do something!
+-# excerpt: Fail, make mistakes and poor judgements… but for god sake, do something!
 -# keywords: startups, apps, fears, building software
 
 .column.eight
@@ -11,9 +11,9 @@
 
     So I got to thinking, why aren't I releasing more projects?, my own apps, the things that sit half finished on my computer somewhere to never been seen by someone? It certainly isn't a commitment thing—sometimes I love these things to death and for whatever reason they don't live.
 
-    I think it's false fears at work, we place them over every decision that we make—it needs this or that feature, or "the customers" (I hate calling people users) won't like it because of x or really, whatever. It's paralysing.
+    I think it's false fears at work, we place them over every decision that we make—it needs this or that feature, or "the customers" (I hate calling people users) won't like it because of x or really, whatever. It's paralysing. I've dropped ideas before because I was scared of the 'opportunity cost'… I'm getting old here, I can't do everything, and I feel indebted to my projects. 
 
-    There is no value in hoarding away your treasures. If you're genuinely creating things that you want to share with other people, then put them out there, fail, make mistakes and poor judgements… but for god sakes, do something!
+    There is no value in hoarding away your treasures. If you're genuinely creating things that you want to share with other people, then put them out there, fail, make mistakes and poor judgements… but for god sake, do something!
 
     I'm working on it too. Good luck.
 
