--- a/app/articles/false-fears.haml
+++ b/app/articles/false-fears.haml
@@ -7,7 +7,7 @@
   :smartypants
     I recently read the [conscious startups manifesto](http://consciousstartups.com/manifesto#we_believe_fear_is_the_main_thing_holding_you_back) and it made me realise a few things about the way that I, my friends, my clients all run our businesses, projects and generally, lives.
 
-    As an arbiter (consultant) it's often a part of my role to ask clients if they really need something that they asked for, to understand their domain and make rational calls on what they should spend their budget (and my time, but that's another story) doing.
+    It's often a part of my role to ask clients if they really need something that they asked for, to understand their domain and make rational calls on what they should spend their budget (and my time, but that's another story) doing, and as an arbiter (consultant) its very easy to do without emotion or fear.
 
     So I got to thinking, why aren't I releasing more projects?, my own apps, the things that sit half finished on my computer somewhere to never been seen by someone? It certainly isn't a commitment thing—sometimes I love these things to death and for whatever reason they don't live.
 
