Use pinboard for links. Bye delicious.

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -63,5 +63,5 @@
     %section#presentations
       - for presentation in @presentations
         %article
-          %a{href: presentation[:link], rel: "external"}
-            %h1=raw presentation[:title]
+          %a{href: presentation["link"], rel: "external"}
+            %h1=raw presentation["title"]
