Added workshop banner for theintro

--- a/app/views/layouts/article.html.haml
+++ b/app/views/layouts/article.html.haml
@@ -17,6 +17,9 @@
     %meta{:name => "robots", :content => "index, follow"}
     %meta{:name => "verify-v1", :content => "BlTJbJUo6znmPTKrfDI07Fho8QvSw7Q/4NxpM0s4HwU="}
   %body{id: "article"}
+    .workshop{style: 'position: absolute; right:0; top: 0;'}
+      %a{href: 'http://www.theint.ro/products/html5'}
+        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png' alt: 'Attend my workshop'}
     %article
       %a#home{href: root_path} Home
       %header
