--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,9 @@
     %meta{:name => "keywords", :content => "ruby, developer, ui, ux, user experience, application development, testing, test driven, development, melbourne, australia, ben, ben schwarz, benschwarz, bschwarz, smoke, passenger-stack, bonsai"}
     = csrf_meta_tag
   %body{id: params[:action]}
+    .workshop{style: 'position: absolute; right:0; top: 0;'}
+      %a{href: 'http://www.theint.ro/products/html5'}
+        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png' alt: 'Attend my workshop'}
     = yield
     %footer
       %small © <a href="/">Ben Schwarz</a> 2009—  
