--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
   %body{id: params[:action]}
     .workshop{style: 'position: absolute; right:0; top: 0;'}
       %a{href: 'http://www.theint.ro/products/html5'}
-        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png' alt: 'Attend my workshop'}
+        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png', alt: 'Attend my workshop'}
     = yield
     %footer
       %small © <a href="/">Ben Schwarz</a> 2009—  
