--- a/app/views/layouts/article.html.haml
+++ b/app/views/layouts/article.html.haml
@@ -19,7 +19,7 @@
   %body{id: "article"}
     .workshop{style: 'position: absolute; right:0; top: 0;'}
       %a{href: 'http://www.theint.ro/products/html5'}
-        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png' alt: 'Attend my workshop'}
+        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png', alt: 'Attend my workshop'}
     %article
       %a#home{href: root_path} Home
       %header
