Remove workshop banner. Add new article. Tidy follower footer.

--- a/app/views/layouts/article.html.haml
+++ b/app/views/layouts/article.html.haml
@@ -17,9 +17,9 @@
     %meta{:name => "robots", :content => "index, follow"}
     %meta{:name => "verify-v1", :content => "BlTJbJUo6znmPTKrfDI07Fho8QvSw7Q/4NxpM0s4HwU="}
   %body{id: "article"}
-    .workshop{style: 'position: absolute; right:0; top: 0;'}
-      %a{href: 'http://www.theint.ro/products/html5'}
-        %img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png', alt: 'Attend my workshop'}
+    /.workshop{style: 'position: absolute; right:0; top: 0;'}
+    /%a{href: 'http://www.theint.ro/products/html5'}
+    /%img{src: 'https://static.shopify.com/s/files/1/0103/6862/t/4/assets/attend-my-workshop-banner.png', alt: 'Attend my workshop'}
     %article
       %a#home{href: root_path} Home
       %header
@@ -35,7 +35,9 @@
           = yield
           %section.footer
             %img{class: "avatar", src: "https://secure.gravatar.com/avatar/42e2ec6a72627f8c15115e279a5f7d8e?s=60"}
-            %p I'm Ben Schwarz, my twitter profile says<br> "I build tiny pieces of the internet".
+            %p I'm Ben Schwarz, I help people build websites and applications for the web. I'm an invited expert to the W3C CSS Working group, and I run <a href="http://www.twitter.com/the_intro">@the_intro</a>
+            
+            
             <a href="http://twitter.com/benschwarz" class="twitter-follow-button" data-show-count="false">Follow @benschwarz</a>
             <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
     %footer
