s/accumulated/incurred/ Thanks @dgoodlad!

--- a/app/articles/stress-and-creation.haml
+++ b/app/articles/stress-and-creation.haml
@@ -19,4 +19,4 @@
 
     To quote [Ben Pieratt](http://pieratt.com/), "Creation is a deeply personal and rewarding activity, which means that your Work should also be deeply personal and rewarding. If it's not, then something is amiss."
 
-    I firmly believe that we - as creators - trade a lot more than just time to practice our craft. We delve ourselves into our projects, and there are many costs accumulated to build truly amazing things...
+    I firmly believe that we - as creators - trade a lot more than just time to practice our craft. We delve ourselves into our projects, and there are many costs incurred to build truly amazing things...
