--- a/app/articles/stress-and-creation.haml
+++ b/app/articles/stress-and-creation.haml
@@ -1,4 +1,4 @@
--# title: Stress, and creating
+-# title: Stress, and creation
 -# published: 2011-12-09
 -# excerpt: We trade a lot more than just time to practice our craft
 -# keywords: work, professionalism, life, development, design, creativity, stress
