Updates thanks to @dylanfm

--- a/app/articles/stress-and-creation.haml
+++ b/app/articles/stress-and-creation.haml
@@ -15,7 +15,7 @@
 
     And finally, **emotional** stress. This can be the most difficult aspect of your working life (if you've got the first two covered) - it relates to how you're feeling about your projects, coworkers, boss, or pretty much any other situation. In my personal experience, this kind of stress can be the hardest to deal with, because you usually have to change something that you don't really want to.
 
-    Having said all of that: I'm ready, willing and able to deal with anything the world throws at me, but only as long as I'm producing work at a level that I'm satisfied with.
+    Having said all of that: I'm confident, ready, willing and able to deal with anything the world throws at me, but only as long as I'm producing work at a level that I'm satisfied with—That is, I'm defined by what I create.
 
     To quote [Ben Pieratt](http://pieratt.com/), "Creation is a deeply personal and rewarding activity, which means that your Work should also be deeply personal and rewarding. If it's not, then something is amiss."
 
