Copy tweaks, thanks @boblet!

--- a/app/articles/stress-and-creation.haml
+++ b/app/articles/stress-and-creation.haml
@@ -9,11 +9,11 @@
 
     Mid-conversation I dropped that I'd identified three kinds of stress that we face as creators - it felt somewhat poetic at the time, so I thought I'd take some time to describe it.
 
-    **Physical**, the kind of stress you're under when you've been eating poorly, drinking too much, exercising too little, or working too long. We've all been there but for the most part, it's manageable.
+    **Physical**, the kind of stress you're under when you've been eating poorly, drinking too much, exercising too little, or working too long. We've all been there, but for the most part, it's manageable.
 
-    **Mental**, you've got things floating around your head that are manifesting into bigger problems or you're lacking the focus to handle what the real issues are. This is the hardest to self-diagnose, and is firmly linked to Physical stress.
+    **Mental**, you've got things floating around your head that are manifesting into bigger problems or you're lacking the focus to handle what the real issues are. This is the hardest to self-diagnose, and is firmly linked to physical stress.
 
-    And finally, **emotional** stress. This can be the most difficult aspect of your working life (if you've got the first two covered) - it relates to how you're feeling about your projects, coworkers, boss, or pretty much any other situation. In my personal experience, this kind of stress can be the hardest to deal with, because you usually have to change something that you don't really want to.
+    And finally, **emotional** stress. This can be the most difficult aspect of your working life (if you've got the first two covered) - it relates to how you're feeling about your projects, clients, coworkers, bosses, or pretty much any other work-related situation. In my personal experience, this kind of stress can be the hardest to deal with, because you usually have to change something that you don't really want to.
 
     Having said all of that: I'm confident, ready, willing and able to deal with anything the world throws at me, but only as long as I'm producing work at a level that I'm satisfied with—That is, I'm defined by what I create.
 
